--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,7 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/windows,gradle,intellij,eclipse
+
+### Others ###
+run/
+.idea/
