modify version parameter for build

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 
-version = "0.1-alpha"
+version = "0.1-alpha-mc1.10.2"
 group= "nanter.mineflow" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "mineflow"
 
